--- a/avidade-1-fatec/index.html
+++ b/avidade-1-fatec/index.html
@@ -13,7 +13,8 @@
 <body>
     <h1>Agora temos o Bitcoin e o Bitcoin Cash</h1>
         <h2>Divergências no controle das transações fizeram um grupo defender mudanças tão abruptas que uma nova moeda digital surgiu</h2>
-            <h5>Por Emerson Alecrim <br> 01/08/2017 às 16h35</h5>
+            <h5>Por Emerson Alecrim</h5>
+            <h5>01/08/2017 às 16h35</h5>
             <p>Quem lida com Bitcoin sabe que o valor dessa moeda é um carrinho de montanha-russa, indo para cima e para baixo rapidamente. É preciso ter sangue frio para lidar com as oscilações. Mas, talvez, nem o mais bem preparado investidor estivesse esperando que o Bitcoin (BTC) passasse por problemas que culminassem em uma nova moeda digital: o Bitcoin Cash já é realidade.
                 O Bitcoin pode sofrer um soft fork, ou seja, uma alteração sistêmica que, por ser branda, é compatível com as versões anteriores do protocolo e, portanto, não costuma trazer problemas para a validação dos blocos. Assim, o ecossistema é mantido mesmo se alguns usuários não implementarem a atualização.  
                 Mas o que acontece agora é um hard fork: as mudanças propostas são tão expressivas que os nós que compõem o sistema do Bitcoin não conseguem validar os blocos formados com base nas novas regras. O resultado é uma bifurcação: as tais novas regras praticamente geram uma criptomoeda.
