--- a/avidade-1-fatec/index.html
+++ b/avidade-1-fatec/index.html
@@ -13,9 +13,9 @@
 <body>
     <h1>Agora temos o Bitcoin e o Bitcoin Cash</h1>
         <h2>Divergências no controle das transações fizeram um grupo defender mudanças tão abruptas que uma nova moeda digital surgiu</h2>
-            <h5>Por Emerson Alecrim</h5>
-            <h5>01/08/2017 às 16h35</h5>
-            <p>Quem lida com Bitcoin sabe que o valor dessa moeda é um carrinho de montanha-russa, indo para cima e para baixo rapidamente. É preciso ter sangue frio para lidar com as oscilações. Mas, talvez, nem o mais bem preparado investidor estivesse esperando que o Bitcoin (BTC) passasse por problemas que culminassem em uma nova moeda digital: o Bitcoin Cash já é realidade.
+            <h5>Por Emerson Alecrim </h5>
+            <h5> 01/08/2017 às 16h35</h5>
+            <p>Quem lida com <strong>Bitcoin</strong> sabe que o valor dessa moeda é um carrinho de montanha-russa, indo para cima e para baixo rapidamente. É preciso ter sangue frio para lidar com as oscilações. Mas, talvez, nem o mais bem preparado investidor estivesse esperando que o Bitcoin (BTC) passasse por problemas que culminassem em uma nova moeda digital: o <strong>Bitcoin Cash</strong> já é realidade.
                 O Bitcoin pode sofrer um soft fork, ou seja, uma alteração sistêmica que, por ser branda, é compatível com as versões anteriores do protocolo e, portanto, não costuma trazer problemas para a validação dos blocos. Assim, o ecossistema é mantido mesmo se alguns usuários não implementarem a atualização.  
                 Mas o que acontece agora é um hard fork: as mudanças propostas são tão expressivas que os nós que compõem o sistema do Bitcoin não conseguem validar os blocos formados com base nas novas regras. O resultado é uma bifurcação: as tais novas regras praticamente geram uma criptomoeda.
             </p>
@@ -25,7 +25,7 @@
 
                     Nos primeiros minutos desta terça-feira (1), o Bitcoin Cash passou a existir oficialmente. Talvez não seja bem uma divisão, pois o Bitcoin original, por assim dizer, preserva a sua quantidade de moedas. O Bitcoin Cash, cuja sigla é BCC, surge como uma rede derivada da primeira. Divisão mesmo ocorreu entre os grupos.
                     Muitas pessoas ligadas ao universo do Bitcoin acreditam que o Bitcoin realmente precisa de mudanças para que mais transações possam ser feitas simultaneamente e passaram a apoiar o SegWit (Segregated Witness), uma proposta de soft fork do Bitcoin que altera o processo de verificação das transações de modo a torná-las menores. Na prática, o limite passa a ser de 2 MB, isto é, mais transações podem ser realizadas por segundo.
-                    Há outro grupo, cujo principal representante é o ex-engenheiro do Facebook Amaury Sechet, que acredita que o SegWit não resolve o problema de escala do Bitcoin. É aqui que surge o Bitcoin Cash: trata-se, essencialmente, de uma implementação do Bitcoin, mas com limite de 8 MB e sem suporte ao SegWit, que agora faz parte do Bitcoin original.
+                    Há outro grupo, cujo principal representante é o ex-engenheiro do Facebook <em>Amaury Sechet</em>, que acredita que o SegWit não resolve o problema de escala do Bitcoin. É aqui que surge o Bitcoin Cash: trata-se, essencialmente, de uma implementação do Bitcoin, mas com limite de 8 MB e sem suporte ao SegWit, que agora faz parte do Bitcoin original.
                     O resultado é que temos, agora, mais uma criptomoeda. Por ser diferente e ter apoio de um número considerável de usuários e grupos, o Bitcoin Cash pode se estabelecer com regras próprias. Os usuários que já tinham bitcoins antes da nova proposta terão as mesmas quantidades de moedas em Bitcoin Cash, mas as transações realizadas com cada variedade a partir de agora ficarão em suas respectivas redes.
                 </p>
                 <div class="img"><img src="img/figura-2.jpg" alt="Figura 2"></div>
