--- a/avidade-1-fatec/index.html
+++ b/avidade-1-fatec/index.html
@@ -11,7 +11,7 @@
     <title>Bitcoin</title>
 </head>
 <body>
-    <h1>Agora temos o Bitcoin e o Bitcoin Cash</h1>
+    <h1 id="inicio">Agora temos o Bitcoin e o Bitcoin Cash</h1>
         <h2>Divergências no controle das transações fizeram um grupo defender mudanças tão abruptas que uma nova moeda digital surgiu</h2>
             <h5>Por Emerson Alecrim </h5>
             <h5> 01/08/2017 às 16h35</h5>
@@ -37,7 +37,13 @@ O efeito disso é uma certa — e previsível — incerteza no mercado. A casa d
 Fato é que, às 15h14 de hoje (horário de Brasília), o primeiro bloco de Bitcoin Cash foi minerado com sucesso. Isso significa que o blockchain da nova moeda (o livro que registra todas as transações) agora é realidade. Durante a publicação deste post, a criptomoeda estava sendo negociada a US$ 215 no Kraken. Já o Bitcoin tradicional (BTC) estava valendo US$ 2.736 (uma ligeira queda).
 Diante de tantas dúvidas, especialistas no assunto têm recomendado cautela: para quem não tem muita experiência ou conhecimento de criptomoedas, talvez seja prudente evitar fazer transações agora, mesmo que os preços se mostrem interessantes. O ideal é esperar que o mercado tenha um pouco mais de estabilidade ou, ao menos, que os aspectos referentes à coexistência das duas criptomoedas fiquem mais claros.
                 </p>
-                <p>Com informações: Business Insider [link: http://www.businessinsider.com/bitcoin-and-bitcoin-cash-2017-7]</p>
-                <p>Fonte: Tecnoblog [link: https://tecnoblog.net/220271/bitcoin-cash-bcc-oficial/]</p>
+                <p>Com informações:
+                    <a href="http://www.businessinsider.com/bitcoin-and-bitcoin-cash-2017-7"> Business Insider</a>
+                </p>
+                <p>Fonte:
+                    <a href="https://tecnoblog.net/220271/bitcoin-cash-bcc-oficial/" target="_blank">Tecnoblog</a>
+                </p>
+                <p>Email: <a href="mailto: igorteodoro2409@gmail.com">contact</a></p>
+                <p><a href="#inicio"> voltar ao topo</a></p>
 </body>
 </html>
